--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,36 @@
-.App {
+
+.profile{
+ margin: 10px;
+  background: #333;
+  color: #ccc;
+  padding: 20px;
+  font-size: 15px;
+}
+.headline{
+  text-align: center;
+  top: 150x;
+}
+.profile > p > span {
+  font-size: 25px;
+  font-weight: bold;
+  font-stretch: expanded;
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.profile > p > a {
+color: #ccc;
+text-decoration-line: underline
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.profile > p  :hover {
+  color: rgb(119, 143, 253);
+  text-decoration-line: underline
   }
-  to {
-    transform: rotate(360deg);
-  }
+.projects{
+  border: 2px solid #3333;
+  width: 100%;
+  padding-top: 15px;
+}
+
+.footer {
+  background: #ecf0f1;
+  margin: 20px;
 }
