--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,14 @@ body {
   margin: auto;
   width: 200px;
   height: 200px;
-  border-radius: 100%
+  border-radius: 100%;
+  margin-top: 80px
 }
 .name {
   font-size: 30px;
   align-self: center;
   justify-self: center;
+  margin-top: 15px;
 }
 .title {
   color: gray;
@@ -39,12 +41,35 @@ body {
   justify-self: center;
 }
 }
+.profile {
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  padding: 10px;
+}
+.footer h4 {
+  color: crimson;
+}
 .socials  > ul > li {
   display: inline-block;
   margin-left: 5px;
   cursor: pointer;
 }
-@media (min-width: 1025px) and (max-width: 1280px){
+.skills {
+  overflow-x: auto;
+  max-width: 100vw;
+}
+.skills li {
+  background: whitesmoke;
+  border: 1px solid #ccc;
+  margin-right: 5px;
+  display: inline;
+ 
+  padding: 5px;
+}
+ul li a {
+  color: #ffffff;
+}
+@media (min-width: 1025px) and (max-width: 3280px){
   .profile{
     display: grid;
     grid-template-columns: 18% 50% 20%;
@@ -63,20 +88,30 @@ body {
     grid-column: 2;
     grid-row: 3;
     font-size: 30px;
+    margin-top: 20px;
   }
   .title {
     grid-row: 4;
     color: gray;
     font-size: 20px;
+    margin-top: 10px;
   }
-  .description {
+  .skills {
     grid-column: 2;
     grid-row: 5;
-    color: gray
+    color: gray;
+    margin-top: 10px;
+  }
+  
+  .description {
+    grid-column: 2;
+    grid-row: 6;
+    color: gray;
+    margin-top: 10px;
   }
   .socials {
     grid-column: 2;
-    grid-row: 6;
+    grid-row: 7;
     color: gray
   }
 
@@ -90,12 +125,12 @@ text-decoration-line: underline
   text-decoration-line: underline
   }
 .projects{
-  border: 2px solid #3333;
+  border: 1px solid #ccc;
   width: 100%;
   padding-top: 15px;
 }
 
 .footer {
-  background: #ecf0f1;
-  margin: 20px;
+  background: #212121;
+  margin-top: 20px;
 }
